Index beers button now toggles show/hide. collapsed update form on indexed beer card

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -168,7 +168,7 @@ button {
   border-color: #ff6e40;
 }
 
-.card-header.indexBeerCard {
+.card.indexBeerCard {
    display: hidden;
 }
 
@@ -186,6 +186,10 @@ button {
   display: hidden;
   background-color: #ff9e80;
   border-color: #ff9e80;
+}
+
+.update-beer-list {
+   display: hidden;
 }
 
 
