--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -44,7 +44,6 @@ img.rounded-corners {
   display: flex;
   justify-content: center;
   height: 20px;
-  // visibility: visible;
   font-family: 'Fredericka the Great', serif;
   margin-top: 20px;
 }
@@ -52,15 +51,15 @@ img.rounded-corners {
 .change-password-header {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  // margin-top: 10px;
 }
 .change-password-auth-display {
   display: flex;
   justify-content: center;
-  height: 20px;
-  // visibility: visible;
+  // height: 20px;
   font-family: 'Fredericka the Great', serif;
-  margin-top: 20px;
+  // margin-top: 20px;
+  display: hidden;
 }
 
 .sign-out {
@@ -191,6 +190,18 @@ button {
 .update-beer-list {
    display: hidden;
 }
+
+// #index-beers {
+//     background-color: #ff6e40;
+//     border: none;
+//     border-radius: 8px;
+//     color: white;
+//     padding: 7px 12px;
+//     text-align: center;
+//     text-decoration: none;
+// //   display: flex;
+//     font-size: 12px;
+// }
 
 
  // https://material.io/resources/color/#!/?view.left=0&view.right=0
