fading out sign-in/sign-out messages, moved positioning of buttons

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -45,7 +45,7 @@ img.rounded-corners {
   justify-content: center;
   height: 20px;
   font-family: 'Fredericka the Great', serif;
-  margin-top: 20px;
+  // margin-top: 20px;
 }
 
 .change-password-header {
@@ -70,9 +70,9 @@ margin-left: auto;
   display: flex;
   justify-content: center;
   height: 20px;
-  visibility: visible;
+  // visibility: visible;
   font-family: 'Fredericka the Great', serif;
-  margin-top: 20px;
+  // margin-top: 20px;
 }
 
 // p.sign-in-auth-display {
@@ -190,18 +190,5 @@ button {
 .update-beer-list {
    display: hidden;
 }
-
-// #index-beers {
-//     background-color: #ff6e40;
-//     border: none;
-//     border-radius: 8px;
-//     color: white;
-//     padding: 7px 12px;
-//     text-align: center;
-//     text-decoration: none;
-// //   display: flex;
-//     font-size: 12px;
-// }
-
 
  // https://material.io/resources/color/#!/?view.left=0&view.right=0
